--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,79 @@
 /* You can add global styles to this file, and also import other style files */
+@import url(//db.onlinewebfonts.com/c/d1bfb85795ca505281f9cee67b285c9a?family=Avenir+LT+Pro);
+@font-face {
+  font-family: "Avenir LT Pro";
+  src: url("//db.onlinewebfonts.com/t/d1bfb85795ca505281f9cee67b285c9a.eot");
+  src: url("//db.onlinewebfonts.com/t/d1bfb85795ca505281f9cee67b285c9a.eot?#iefix")
+      format("embedded-opentype"),
+    url("//db.onlinewebfonts.com/t/d1bfb85795ca505281f9cee67b285c9a.woff2")
+      format("woff2"),
+    url("//db.onlinewebfonts.com/t/d1bfb85795ca505281f9cee67b285c9a.woff")
+      format("woff"),
+    url("//db.onlinewebfonts.com/t/d1bfb85795ca505281f9cee67b285c9a.ttf")
+      format("truetype"),
+    url("//db.onlinewebfonts.com/t/d1bfb85795ca505281f9cee67b285c9a.svg#Avenir LT Pro")
+      format("svg");
+}
+html { 
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    width: 100%;
+    height: 100%;
+}
+html::-webkit-scrollbar {
+    display: none;
+}
+body {
+    width: 100%;
+    box-sizing: content-box;
+    
+}
+
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+.lds-dual-ring {
+  display: inline-block;
+  width: 80px;
+  height: 80px;
+}
+.lds-dual-ring:after {
+  content: " ";
+  display: block;
+  width: 100px;
+  height: 100px;
+  margin: 8px;
+  border-radius: 50%;
+  border: 6px solid rgb(84, 103, 202);
+  border-color: rgb(84, 103, 202) transparent rgb(84, 103, 202) transparent;
+  animation: lds-dual-ring 1.2s linear infinite;
+}
+
+.overlay{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.title{
+  margin-top: 80px;
+   text-align: center;
+   padding-left: 50px;
+ 
+}
+h1{
+  font-size: 50px;
+  color: rgb(84, 103, 202);
+}
+@keyframes lds-dual-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
